<resources>
    <string name="app_name">Rentara</string>
    <string name="listTitle">Welcome</string>
    <string name="listSubtitle">Rent out your unused items and earn $</string>
    <string name="listButton">List Item</string>
    <string name="listingTitle">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="rentDaily">Daily</string>
    <string name="rentWeekly">Weekly</string>
    <string name="myListingsTitle">My Listings</string>
    <string name="listingsCountTitle">Listings Count</string>
    <string name="numberOfListings">Count</string>
    <string name="defaultAmount">00</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="addPhotos">Add Photos</string>
    <string name="action_list">List An Item</string>
    <string name="action_my_listings">My Listings</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Rentara</string>
    <string name="nav_header_subtitle">Earn more, Save more</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About Us</string>
    <string name="aboutus_title">We help you earn more or save more !!</string>
    <string name="aboutus_message">We are a user-friendly online platform for peer to peer rentals within the locality anywhere in Ireland!!</string>
    <string name="rentalsNotFound">No listings Yet...\nGo Make a listing!</string>
    <string name="listingError">Error : Couldn\'t Make a listing...</string>
    <string name="listingDetails">Listing Details</string>
    <string name="messageLoading">Please Wait while the rentals are Loading...</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_product_image">Select Product Image</string>
    <string name="select_profile_image">Select Profile Image</string>
</resources>