<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_list_item"
            android:title="@string/action_list" />
        <item
            android:id="@+id/listingsFragment"
            android:icon="@drawable/ic_listings"
            android:title="@string/action_my_listings" />
        <item
            android:id="@+id/aboutusFragment"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/action_about" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/action_send" />
        </menu>
    </item>
</menu>