<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/listingsFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="ie.setu.rentara.ui.list.ListFragment"
        android:label="@string/action_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_listingsFragment"
            app:destination="@id/listingsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/listingsFragment"
        android:name="ie.setu.rentara.ui.listings.ListingsFragment"
        android:label="@string/action_my_listings"
        tools:layout="@layout/fragment_listings" >
        <action
            android:id="@+id/action_listingsFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_listingsFragment_to_listingDetailFragment"
            app:destination="@id/donationDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.setu.rentara.ui.aboutus.AboutusFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/donationDetailFragment"
        android:name="ie.setu.rentara_app.ui.detail.ListingDetailFragment"
        android:label="Donation Detail"
        tools:layout="@layout/fragment_listing_detail" >
        <action
            android:id="@+id/action_listingDetailFragment_to_listingsFragment"
            app:destination="@id/listingsFragment" />
        <argument
            android:name="listingid"
            app:argType="string" />
    </fragment>
</navigation>