<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="rentaravm"
            type="ie.setu.rentara_app.ui.detail.ListingDetailViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.ListingDetailFragment">

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/price"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productDescription" />

<!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:text="@string/upvotes"-->
<!--        android:textAlignment="textEnd"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/editUpvotes"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/price" />-->

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

<!--    <EditText-->
<!--        android:id="@+id/editUpvotes"-->
<!--        android:layout_width="210dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="4dp"-->
<!--        android:ems="10"-->
<!--        android:inputType="number"-->
<!--        android:textSize="24sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editPrice" />-->

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/listingTitle"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTitle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:text="@string/description"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editDescription"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/editListingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteListingButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteListingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editListingButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>